Tweak to navbar to avoid wrapping in small to medium screen sizes. ALso dynamically hudes user avatar on small and medium screens.

--- a/public/css/_mcsdsf.scss
+++ b/public/css/_mcsdsf.scss
@@ -91,7 +91,15 @@ li.dropdown > ul > li > a:hover {
     padding: 0.5rem 0 0.2rem 2rem;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .navbar-brand {
+    padding: 1.5rem 0 0 0.5rem;
+  }
+  .nav > li > a {
+    padding: 1.5rem 0.5rem 0 0.5rem;
+  }
+}
+@media screen and (min-width: 992px) {
   .navbar-brand {
     padding: 1.5rem 0 0 2rem;
   }
